Split up Guvnor's slow integration tests from the normal, fast unit tests. Use "mvn test" for the fast tests and "mvn integration-test" for all tests (including the very slow ones). Note that "mvn install" includes running all tests too.