@@ -55,7 +55,10 @@
     <gwt.version>2.3.0</gwt.version>
     <weld.version>1.1.5.Final</weld.version>
     <seam.version>3.1.0.Final</seam.version>
+
+    <!-- Make build platform independent -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <repositories>
@@ -230,8 +233,26 @@
               <include>**/*Test.java</include>
             </includes>
             <excludes>
-              <exclude>**/*AbstractTest.java</exclude>
+              <exclude>**/*IntegrationTest.java</exclude>
             </excludes>
+            <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.12</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <includes>
+              <include>**/*IntegrationTest.java</include>
+            </includes>
             <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
           </configuration>
         </plugin>
@@ -471,6 +492,10 @@
         <!-- Entry needed to enable jdocbook packaging -->
         <groupId>org.jboss.maven.plugins</groupId>
         <artifactId>maven-jdocbook-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
